--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,124 +1,141 @@
 <div id="skills">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <h2>Skills</h2>
-                <div class="progress-label">HTML</div>
-                <div class="progress">
-                    <div id="html-chart" class="progress-bar" role="progressbar">
-                        <span class="sr-only">92% Complete</span>
-                    </div>
-                </div>
-                <ul class="skills-explained clearfix">
-                    <li>Good old fashioned HTML</li>
-                </ul>
-                <div class="progress-label">CSS</div>
-                <div class="progress">
-                    <div id="css-chart" class="progress-bar" role="progressbar">
-                        <span class="sr-only">89% Complete</span>
-                    </div>
-                </div>
-                <ul class="skills-explained clearfix">
-                    <li>CSS</li>
-                    <li>LESS/SASS</li>
-                    <li>Responsive</li>
-                    <li>Front-End Fameworks</li>
-                </ul>
-                <div class="progress-label">Javascript</div>
-                <div class="progress">
-                    <div id="js-chart" class="progress-bar" role="progressbar">
-                        <span class="sr-only">60% Complete</span>
-                    </div>
-                </div>
-                <ul class="skills-explained clearfix">
-                    <li>Vanilla</li>
-                    <li>jQuery</li>
-                    <li>Grunt/Gulp</li>
-                </ul>
-                <div class="progress-label">Design</div>
-                <div class="progress">
-                    <div id="design-chart" class="progress-bar" role="progressbar">
-                        <span class="sr-only">60% Complete</span>
-                    </div>
-                </div>
-                <ul class="skills-explained clearfix">
-                    <li>Photoshop</li>
-                    <li>Sketch</li>
-                    <li>Adobe XD</li>
-                    <li>UX/UI</li>
-                    <li>Other Adobe CS</li>
-                </ul>
-                <div class="progress-label">Templating and CMS</div>
-                <div class="progress">
-                    <div id="cms-chart" class="progress-bar" role="progressbar">
-                        <span class="sr-only">60% Complete</span>
-                    </div>
-                </div>
-                <ul class="skills-explained clearfix">
-                    <li>Drupal/Twig</li>
-                    <li>Wordpress</li>
-                    <li>Jekyll/Liquid</li>
-                    <li>Netlify</li>
-                    <li>Site Building</li>
-                    <li>Theming</li>
-                </ul>
-                <div class="progress-label">Life</div>
-                <div class="progress">
-                    <div id="life-chart" class="progress-bar" role="progressbar">
-                        <span class="sr-only">75% Complete</span>
-                    </div>
-                </div>
-                <ul class="skills-explained clearfix">
-                    <li>Husband/Dad</li>
-                    <li>Pet Owner</li>
-                    <li>Pinball</li>
-                    <li>Outside Stuff</li>
-                    <li>Blazer Fan</li>
-                </ul>
-            </div>
-            <div class="col-md-6 experience">
-                <h2>Experience</h2>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        Current Position  -
-                        <span class="employer">
-                            <a href="http://www.eclipsemediasolutions.com/" title="Squishymedia">Eclipse MS</a>
-                        </span>
-                    </div>
-                    <div class="panel-body">
-                        Senior Front End Developer &amp; UX Designer
-                    </div> 
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        Jan. 2014 - March. 2017 -
-                        <span class="employer">
-                            <a href="http://www.squishymedia.com/" title="Squishymedia">Squishymedia</a>
-                        </span>
-                    </div>
-                    <div class="panel-body">
-                        Senior Front End Developer &amp; UX Designer
-                    </div>
-                    <div class="panel-heading">
-                        Oct. 2012 - Jan. 2014 -
-                        <span class="employer">
-                            <a href="http://www.squishymedia.com/" title="Squishymedia">Squishymedia</a>
-                        </span>
-                    </div>
-                    <div class="panel-body">
-                        Front End Developer &amp; UX Designer
-                    </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        March 2006 - Oct. 2012 -
-                        <span class="employer dis">Freelance Contractor</span>
-                    </div>
-                    <div class="panel-body">
-                        Photographer, Designer, and Front End Developer
-                    </div>
-                </div>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Skills</h2>
+        <div class="progress-label">HTML</div>
+        <div class="progress">
+          <div id="html-chart" class="progress-bar" role="progressbar">
+            <span class="sr-only">92% Complete</span>
+          </div>
         </div>
+        <ul class="skills-explained clearfix">
+          <li>Good old fashioned HTML</li>
+        </ul>
+        <div class="progress-label">CSS</div>
+        <div class="progress">
+          <div id="css-chart" class="progress-bar" role="progressbar">
+            <span class="sr-only">89% Complete</span>
+          </div>
+        </div>
+        <ul class="skills-explained clearfix">
+          <li>CSS</li>
+          <li>LESS/SASS</li>
+          <li>Responsive</li>
+          <li>Front-End Fameworks</li>
+        </ul>
+        <div class="progress-label">Javascript</div>
+        <div class="progress">
+          <div id="js-chart" class="progress-bar" role="progressbar">
+            <span class="sr-only">60% Complete</span>
+          </div>
+        </div>
+        <ul class="skills-explained clearfix">
+          <li>Vanilla</li>
+          <li>jQuery</li>
+          <li>Grunt/Gulp</li>
+        </ul>
+        <div class="progress-label">Design</div>
+        <div class="progress">
+          <div id="design-chart" class="progress-bar" role="progressbar">
+            <span class="sr-only">60% Complete</span>
+          </div>
+        </div>
+        <ul class="skills-explained clearfix">
+          <li>Photoshop</li>
+          <li>Sketch</li>
+          <li>Adobe XD</li>
+          <li>UX/UI</li>
+          <li>Other Adobe CS</li>
+        </ul>
+        <div class="progress-label">Templating and CMS</div>
+        <div class="progress">
+          <div id="cms-chart" class="progress-bar" role="progressbar">
+            <span class="sr-only">60% Complete</span>
+          </div>
+        </div>
+        <ul class="skills-explained clearfix">
+          <li>Drupal/Twig</li>
+          <li>Wordpress</li>
+          <li>Jekyll/Liquid</li>
+          <li>Netlify</li>
+          <li>Site Building</li>
+          <li>Theming</li>
+        </ul>
+        <div class="progress-label">Life</div>
+        <div class="progress">
+          <div id="life-chart" class="progress-bar" role="progressbar">
+            <span class="sr-only">75% Complete</span>
+          </div>
+        </div>
+        <ul class="skills-explained clearfix">
+          <li>Husband/Dad</li>
+          <li>Pet Owner</li>
+          <li>Pinball</li>
+          <li>Outside Stuff</li>
+          <li>Blazer Fan</li>
+        </ul>
+      </div>
+      <div class="col-md-6 experience">
+        <h2>Experience</h2>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            Current Position -
+            <span class="employer">
+              <a href="http://www.squishymedias.com/" title="Squishymedia"
+                >Squishymedia</a
+              >
+            </span>
+          </div>
+          <div class="panel-body">UX &amp; Design Lead</div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            March 2017 - March 2020
+            <span class="employer">
+              <a
+                href="http://www.eclipsemediasolutions.com/"
+                title="Eclipse Media Solutions"
+                >Eclipse MS</a
+              >
+            </span>
+          </div>
+          <div class="panel-body">
+            Senior Front End Developer &amp; UX Designer
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            Jan. 2014 - March. 2017 -
+            <span class="employer">
+              <a href="http://www.squishymedia.com/" title="Squishymedia"
+                >Squishymedia</a
+              >
+            </span>
+          </div>
+          <div class="panel-body">
+            Senior Front End Developer &amp; UX Designer
+          </div>
+          <div class="panel-heading">
+            Oct. 2012 - Jan. 2014 -
+            <span class="employer">
+              <a href="http://www.squishymedia.com/" title="Squishymedia"
+                >Squishymedia</a
+              >
+            </span>
+          </div>
+          <div class="panel-body">Front End Developer &amp; UX Designer</div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            March 2006 - Oct. 2012 -
+            <span class="employer dis">Freelance Contractor</span>
+          </div>
+          <div class="panel-body">
+            Photographer, Designer, and Front End Developer
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
