--- a/_scss/pages/_work-pages.scss
+++ b/_scss/pages/_work-pages.scss
@@ -1,51 +1,50 @@
-
 //posts
 .post {
-    .post-content-wrap{
-        margin: 20px;
-        min-height: 500px;
-        
+  min-height: calc(100vh - 150px);
+  .post-content-wrap {
+    margin: 20px;
+    min-height: 500px;
+  }
+  .content-section {
+    width: 100%;
+    padding: 100px 0 20px;
+    overflow: visible;
+    @media (max-width: 767px) {
+      padding: 0;
+      .post-text {
+        padding: 0 40px;
+      }
     }
-    .content-section {
-        width: 100%;
-        padding: 100px  0 20px;
-        overflow: visible;
-        @media(max-width: 767px){
-            padding: 0;
-            .post-text{
-                padding: 0 40px;
-            }
-        }
-    }
+  }
 }
 
-.post-content-wrap{
-    background-color: #fefefe;
+.post-content-wrap {
+  background-color: #fefefe;
 
-    h1 .client{
-        font-size: 14px;
-        line-height: 17px;
-        display: block;
-        color: #aaa;
+  h1 .client {
+    font-size: 14px;
+    line-height: 17px;
+    display: block;
+    color: #aaa;
+  }
+
+  .nav-tags {
+    padding: 0;
+
+    li {
+      margin-right: 5px;
+      margin-bottom: 10px;
+      padding: 5px 10px 0 0;
+      color: $dark;
+      border-radius: 0;
+      font-size: 14px;
     }
-
-    .nav-tags {
-        padding:0;
-
-        li{
-            margin-right: 5px;
-            margin-bottom: 10px;
-            padding: 5px 10px 0 0;
-            color: $dark;
-            border-radius: 0;
-            font-size: 14px;
-        }
-    }
+  }
 }
 
-.post-img{
-    img{
-        margin-top: 40px;
-        box-shadow: 0 0 50px rgba(0,0,0,0.2);
-    }
+.post-img {
+  img {
+    margin-top: 40px;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.2);
+  }
 }
